# ZeroFS

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.multiarch  LICENSE  MULTI_WRITER_COORDINATION.md  Makefile  README-action.md  README.md  action.yml  check_ha_status.sh  codecov.yml  flake.nix  install.sh  manage_ha_cluster.sh  test_ha.sh
.github/: .pjdfstest-fuse-exclude  CLA.md
documentation/: package-lock.json  package.json  typography.ts  vercel.json
examples/: check-ha-status.sh  ha-config-lease.toml  ha-config-raft.toml  ha-config-wal.toml  ha-docker-compose.yml  haproxy.cfg  setup-ha-test.sh  start-ha-test.sh  test-ha.sh  workflow-database-testing.yml  workflow-persistent-cache.yml  workflow-shared-artifacts.yml
jepsen/: README.md  local-fs.patch  run.sh  zerofs-ha.clj  zerofs.clj
nix/: package.nix
packaging/: README.md  config.toml  nfpm.yaml  zerofs.env.example
scripts/: build-site.sh  generate-sitemap.sh  setup-zerofs.sh
src/: bucket_identity.rs  cache.rs  encryption.rs  filesystem.rs  filesystem_stats.rs  key_management.rs  lock_manager.rs  main.rs  nbd.rs  nfs.rs  operations.rs  posix_tests.rs  stats.rs  write_tracker.rs
website/: LICENSE  README.md  _headers  config.toml  index.html  robots.txt  vercel.json
zerofs/: .gitignore  Cargo.toml  build.rs
zerofs/.cargo/: config.toml
zerofs/nbd-proto/: Cargo.toml
zerofs/nbd-proto/fuzz/: Cargo.toml
zerofs/nbd-proto/fuzz/examples/: gen_corpus.rs
zerofs/nbd-proto/fuzz/fuzz_targets/: decode.rs
zerofs/nbd-proto/src/: lib.rs
zerofs/ninep-client/: Cargo.toml
zerofs/ninep-client/src/: lib.rs  linux.rs  ops.rs  runtime.rs  web_transport.rs
zerofs/ninep-proto/: Cargo.toml
zerofs/ninep-proto/fuzz/: Cargo.toml
zerofs/ninep-proto/fuzz/examples/: gen_corpus.rs
zerofs/ninep-proto/fuzz/fuzz_targets/: decode.rs
zerofs/ninep-proto/src/: deku_bytes.rs  lib.rs  lock_range.rs  protocol.rs  retry.rs
zerofs/proto/: admin.proto  replication.proto
zerofs/scripts/: release-client.sh
zerofs/src/: block_transformer.rs  bucket_identity.rs  checkpoint_manager.rs  config.rs  coordinator.rs  db.rs  dedup.rs  encryption.rs  failpoints.rs  fault_store.rs  frame_codec.rs  key_management.rs  length_checked_object_store.rs  lib.rs  main.rs  metadata_digest.rs  mount.rs  net_util.rs  nfs.rs  object_store_prefetch.rs  object_trace.rs  parse_object_store.rs  posix_tests.rs  prometheus.rs  redis_conditional_store.rs  retrying_object_store.rs  segment.rs  segment_extractor.rs  segment_store.rs  storage_class_object_store.rs  storage_compatibility.rs  task.rs  webui.rs  zerofs_client_tests.rs
zerofs/src/cli/: compactor.rs  debug.rs  fatrace.rs  init.rs  ls.rs  mod.rs  monitor.rs  otrace.rs  password.rs  remove.rs  server.rs  truncate.rs
zerofs/src/fs/: boot.rs  cache.rs  errors.rs  filter_policy.rs  flush_coordinator.rs  gc.rs  handle.rs  inode.rs  key_codec.rs  lock_manager.rs  metrics.rs  mod.rs  operations.rs  permissions.rs  recovery.rs  stats.rs  test_util.rs  tracing.rs  types.rs  write_coordinator.rs
zerofs/src/fs/operations/: common.rs  dir_ops.rs  file_ops.rs  link_ops.rs  metadata_ops.rs  remove_ops.rs  rename_ops.rs
zerofs/src/fs/ops/: create.rs  io.rs  link.rs  lookup.rs  mod.rs  remove.rs  rename.rs  setattr.rs
zerofs/src/fs/store/: chunk.rs  chunk_merge.rs  directory.rs  extent.rs  inode.rs  mod.rs  orphan.rs
zerofs/src/fs/store/extent/: compact.rs  mod.rs  read.rs  reclaim.rs  select.rs  test_util.rs  write.rs
zerofs/src/ha/: health_server.rs  lease_coordinator.rs  mod.rs  raft_cluster.rs  replication_protocol.rs  server_mode.rs  wal_entry.rs  wal_receiver.rs  wal_streamer.rs
zerofs/src/nbd/: error.rs  handler.rs  mod.rs  protocol.rs  server.rs
zerofs/src/ninep/: errors.rs  handler.rs  lock_manager.rs  mod.rs  op_id_dedup_tests.rs  protocol.rs  server.rs
zerofs/src/replication/: failover.rs  leader_record.rs  lease.rs  mod.rs  replay.rs  replicator.rs  tail.rs  transport.rs  types.rs  zombie.rs
zerofs/src/rpc/: client.rs  convert.rs  mod.rs  server.rs
zerofs/tests/: failover_e2e.rs
zerofs/tests/dst/: actor.rs  checks.rs  data.rs  digest.rs  fp_crash.rs  gc.rs  mod.rs  namespace.rs  sim.rs  world.rs
zerofs/tests/dst/namespace/: actor.rs
zerofs/tests/failpoints/: consistency.rs  mod.rs
zerofs/zerofs-client/: Cargo.toml  README.md
zerofs/zerofs-client-web/: Cargo.toml
zerofs/zerofs-client-web/src/: lib.rs
zerofs/zerofs-client/examples/: quickstart.rs
zerofs/zerofs-client/src/: client.rs  dir.rs  error.rs  failover.rs  file.rs  io.rs  lib.rs  linux.rs  path.rs  runtime.rs  session.rs  stream.rs  types.rs
zerofs/zerofs-csi/: Cargo.toml  Dockerfile  README.md  build.rs
zerofs/zerofs-csi/deploy/: controller.yaml  csidriver.yaml  gateway-example.yaml  networkpolicy-example.yaml  node.yaml  rbac.yaml  storageclass-example.yaml
zerofs/zerofs-csi/e2e/: Dockerfile  gateway.yaml  minio.yaml  workload.yaml
zerofs/zerofs-csi/proto/: admin.proto
zerofs/zerofs-csi/src/: admin.rs  controller.rs  identity.rs  lib.rs  main.rs  node.rs  proto.rs  server.rs  targets.rs
zerofs/zerofs-csi/tests/: integration.rs
zerofs/zerofs-ffi/: Cargo.toml  README.md  RELEASING.md
zerofs/zerofs-ffi/bindings/: generate.sh
zerofs/zerofs-ffi/bindings/go/: README.md  facade.go  go.mod  zerofs_ffi.go  zerofs_ffi.h
zerofs/zerofs-ffi/bindings/python/: README.md  build_wheel.py  pyproject.toml
zerofs/zerofs-ffi/bindings/python/zerofs/: __init__.py
zerofs/zerofs-ffi/bindings/python/zerofs_client/: __init__.py
zerofs/zerofs-ffi/bindings/python/zerofs_ffi/: __init__.py
zerofs/zerofs-ffi/bindings/typescript/: zerofs.ts
zerofs/zerofs-ffi/bindings/typescript/packaging/: assemble.sh  index.d.ts  index.js  package.json.tmpl  stamp.mjs
zerofs/zerofs-ffi/bindings/typescript/packaging/platform-package/: index.d.ts  index.js  package.json.tmpl
zerofs/zerofs-ffi/src/: dir.rs  error.rs  file.rs  lib.rs  types.rs
zerofs/zerofs-ffi/tests/go/: main.go
zerofs/zerofs-ffi/tests/node/: test_facade.ts
zerofs/zerofs-ffi/tests/python/: test_ergonomics.py  test_facade.py  test_smoke.py
(+204 files in other folders)
