[package]
name = "zerofs"
version = "0.11.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
mimalloc = "0.1"
zerofs_nfsserve = "0.11"
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slatedb = { git = "https://github.com/slatedb/slatedb.git", rev = "788013b5960089b25419753a4f159fa2176f1777", features = [
    "wal_disable",
] }
object_store = { version = "0.12.3", features = ["aws", "azure", "gcp"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
futures = "0.3"
foyer = "0.17"
foyer-common = "0.17"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
lz4_flex = "0.11"
anyhow = "1.0"
hex = "0.4"
argon2 = "0.5"
url = "2.5"
deku = "0.19"
thiserror = "2.0"
comfy-table = "7.1"
num-format = "0.4"
libc = "0.2"
dashmap = "6.1"
uuid = { version = "1.17", features = ["v4"] }
toml = "0.9"
shellexpand = "3.1"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }

[dev-dependencies]
tempfile = "3.21"
