[build-system]
requires = ["maturin>=1.10,<2.0", "uniffi-bindgen==0.31.0"]
build-backend = "maturin"

[project]
name = "zerofs"
description = "Async, path-based client for ZeroFS over 9P, with idiomatic Python ergonomics"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.9"
dynamic = ["version"]

[tool.maturin]
bindings = "uniffi"
manifest-path = "../../Cargo.toml"
module-name = "zerofs_ffi"
python-packages = ["zerofs"]
